2022-07-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PAGE): Refactor: drop AC_DEFINE of
	`PAGEA4`.  This symbol appears to be a relic; it is nowhere
	tested or dereferenced.

2022-07-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/tty-char.tmac: Drop definition of \[sd] special
	character.  This was superseded by commit 78e666246c, 8 May,
	which defined a fallback for the character in tty.tmac instead.
	Thanks to Dave Kemper for the catch.

2022-07-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/tests/pdfpic_does-not-choke-on-bad-pdfinfo-output.sh:
	Skip test if "pdfinfo" command not available.

2022-07-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Add sanity checks for font description file generation
	for PDF output device, prompted by discussion with Ingo
	Schwarze.  See <https://lists.gnu.org/archive/html/groff/\
	2022-06/msg00094.html>.

	* font/devpdf/tests/basic-fonts-present.sh:
	* font/devpdf/tests/urw-fonts-present.sh: Add files.

	* font/devpdf/devpdf.am (font_devpdf_TESTS): Add the former test
	unconditionally, and the latter only if `HAVE_URW_FONTS`.

2022-07-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am: Refactor to simplify.  Now that
	symbol.map lives in the "devpdf/generate" directory along with
	the other map files, it doesn't need a dedicated Makefile target
	to produce it.
	(DEVPDFFONTMAP_1, DEVPDFFONTMAP_2): Coalesce and rename to...
	(devpdffontmapdata): ...this.
	(font/devpdf/map/symbol.map:): Drop target.
	(devpdffontmap_DATA, font/devpdf/download): Update dependencies.

2022-07-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Recast
	diagnostic message so that the user understands the consequence
	of failure to locate a Type 1 font file (that isn't one of the
	base 14 PostScript level 1 fonts): the font will be unavailable
	for the "pdf" output device.
